--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,8 +72,18 @@ target-version = ['py311']
 [tool.ruff]
 target-version = "py311"
 line-length = 88
+
+[tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
-ignore = ["E501", "PLR0913", "PLR0912"]
+ignore = [
+    "E501",
+    "PLR0913",
+    "PLR0912",
+    "PLR2004",
+    "RUF001",
+    "RUF002",
+    "RUF003",
+]
 
 [tool.mypy]
 python_version = "3.11"
